--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
 	"version": "1.0.0",
 	"private": true,
 	"scripts": {
-		"build": "wp-scripts build --webpack-src-dir=src --output-path=build",
-		"start": "wp-scripts start --webpack-src-dir=src --output-path=build"
+		"build": "wp-scripts build --webpack-src-dir=src/blocks --output-path=build && cp src/blocks/listings-card/render.php build/listings-card/render.php && cp src/blocks/listing-details/render.php build/listing-details/render.php",
+		"start": "wp-scripts start --webpack-src-dir=src/blocks --output-path=build"
 	},
 	"devDependencies": {
 		"@wordpress/scripts": "^30.0.0"
