--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,23 @@
 node_modules/
 build/
 vendor/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Editor files
+*.swp
+*.swo
+*~
+.idea/
+.vscode/
+.cursor/
+
+# Logs
+*.log
+npm-debug.log*
+
+# Environment
+.env
+.env.*
